// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders without breaking if dummy data is fed to it 1`] = `
<div
  className="bg-dark p-4"
  style={
    Object {
      "margin": "1em",
    }
  }
>
  <img
    alt=""
    className="hvr-bob"
    src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/4.png"
    width="180"
  />
  <div
    style={
      Object {
        "display": "inline-block",
        "marginLeft": 10,
      }
    }
  >
    <div
      style={
        Object {
          "fontSize": "1.25em",
          "fontWeight": "bold",
        }
      }
    >
      pikachu
    </div>
    <div>
      Pokedex ID: 
      7
    </div>
    <div
      className="rounded d-flex justify-content-center mt-2"
      style={
        Object {
          "background": "#f8d030",
        }
      }
    >
      Type: 
      electric
    </div>
    <button
      className="btn btn-primary mt-3"
      onClick={[Function]}
      type="button"
    >
      Add to list
    </button>
  </div>
</div>
`;

exports[`renders without breaking if no data is fed to it 1`] = `
<div
  className="bg-dark p-4"
  style={
    Object {
      "margin": "1em",
    }
  }
>
  <img
    alt=""
    className="hvr-bob"
    src={undefined}
    width="180"
  />
  <div
    style={
      Object {
        "display": "inline-block",
        "marginLeft": 10,
      }
    }
  >
    <div
      style={
        Object {
          "fontSize": "1.25em",
          "fontWeight": "bold",
        }
      }
    />
    <div>
      Pokedex ID: 
    </div>
    <div
      className="rounded d-flex justify-content-center mt-2"
      style={
        Object {
          "background": "#68a090",
        }
      }
    >
      Type: 
    </div>
    <button
      className="btn btn-primary mt-3"
      onClick={[Function]}
      type="button"
    >
      Add to list
    </button>
  </div>
</div>
`;
